small bug fixes

--- a/cl/configs/train_config_example.yml
+++ b/cl/configs/train_config_example.yml
@@ -1,11 +1,11 @@
-experiment_name: 125M_basline_dev_explr
+experiment_name: 125M_baseline_dev_explr
 param_count: 125M
 devices: "0"
 epochs: 50
 max_length: 450 
 batch_size: 16
 optimizer: 
-    lr: 6e-5
+    lr: 6.0e-5
     weight_decay: 0.01
     scheduler_type: exponential 
     scheduler_kwargs: 
