some expert iter updates

--- a/cl/expert_iter/config.yml
+++ b/cl/expert_iter/config.yml
@@ -1,8 +1,10 @@
 experiment_name: 00_seed100
 param_count: 125M
-devices: "0"
+devices: "7"
 epochs: 3
-max_length: 450 
-batch_size: 16
+max_length: 400
+inference_batch_size: 16
+inference_num_samples: 10
+train_batch_size: 16
 num_iters: 20
 weight_decay: 0.01
